--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -11,11 +11,10 @@
       <h4 class="text-2xl">
         <a href="#todos">Todos</a>
       </h4>
-      <a href="#get_all_todos">Get all todos</a>
-      <a href="#get_single_todo">Get a single todo</a>
-      <a href="#add_todo">Add a todo</a>
-      <a href="#update_todo">Update a todo</a>
-      <a href="#delete_todo">Delete a todo</a>
+      <% routes.forEach(function(route){ %>
+        <a href="#<%= route.id %>"><%= route.title %></a>
+      <% }); %>
     </section>
+
   </div>
 </aside>
