--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <%- include('../layouts/base'); %>
 
   <section>
-    <main class="max-w-4xl mx-auto">
+    <main class="max-w-4xl mx-auto px-4">
       <%- include('../components/nav'); %>
       
       <section class="flex flex-col gap-4">
