--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -1,20 +1,22 @@
-<aside class="border-r min-h-screen p-4 fixed top-0 left-0 w-60">
-  <div class="flex flex-col gap-8">
-    <section class="flex flex-col gap-2">
-      <h4 class="text-2xl"> 
-        <a href="#todos">General</a>
-      </h4>
-      <a href="#how_to">How to use it?</a>
-    </section>
-
-    <section class="flex flex-col gap-2">
-      <h4 class="text-2xl">
-        <a href="#todos">Todos</a>
-      </h4>
-      <% routes.forEach(function(route){ %>
-        <a href="#<%= route.id %>"><%= route.title %></a>
-      <% }); %>
-    </section>
-
+<aside id="sidebar" class="hidden lg:block border-r min-h-screen p-4 fixed top-0 left-0 w-full bg-white lg:w-60">
+  <div class="relative">
+    <div class="flex flex-col gap-8">
+      <section class="flex flex-col gap-2">
+        <h4 class="text-2xl"> 
+          <a href="#todos">General</a>
+        </h4>
+        <a href="#how_to">How to use it?</a>
+      </section>
+  
+      <section class="flex flex-col gap-2">
+        <h4 class="text-2xl">
+          <a href="#todos">Todos</a>
+        </h4>
+        <% routes.forEach(function(route){ %>
+          <a href="#<%= route.id %>"><%= route.title %></a>
+        <% }); %>
+      </section>
+    </div>
+    <button id="close-nav" class="lg:hidden absolute top-4 right-4">Close</button>
   </div>
 </aside>
