feat(readme): Add readme

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,10 +1,10 @@
 <%- include('../layouts/base'); %>
 
   <section>
-    <main class="max-w-4xl mx-auto px-4">
+    <main class="max-w-4xl mx-auto">
       <%- include('../components/nav'); %>
       
-      <section class="flex flex-col gap-4">
+      <section class="flex flex-col gap-4 px-4 py-16">
         <h1 class="text-4xl font-semibold">Fakeapi</h1>
         <p class="text-lg">Free to use FAKE API.</p>
         <div class="flex gap-4">
