--- a/public/style.css
+++ b/public/style.css
@@ -624,10 +624,6 @@ video {
   width: 100%;
 }
 
-.max-w-24 {
-  max-width: 6rem;
-}
-
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -644,36 +640,12 @@ video {
   max-width: 80rem;
 }
 
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-56 {
-  max-width: 14rem;
-}
-
-.max-w-full {
-  max-width: 100%;
-}
-
-.max-w-\[calc\(100vw-2rem\)\] {
-  max-width: calc(100vw - 2rem);
-}
-
-.max-w-\[calc\(100vw-3rem\)\] {
-  max-width: calc(100vw - 3rem);
-}
-
-.max-w-\[calc\(100vw-3sssssrem\)\] {
-  max-width: calc(100vw - 3sssssrem);
-}
-
-.max-w-\[calc\(100vw-3\.5rem\)\] {
-  max-width: calc(100vw - 3.5rem);
-}
-
 .max-w-\[calc\(100vw-3\.25rem\)\] {
   max-width: calc(100vw - 3.25rem);
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .flex-1 {
@@ -718,10 +690,6 @@ video {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .rounded-lg {
@@ -774,6 +742,11 @@ video {
   padding-right: 1rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -820,29 +793,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-@media (min-width: 768px) {
-  .md\:ml-60 {
-    margin-left: 15rem;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
-  .md\:w-60 {
-    width: 15rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
 }
 
 @media (min-width: 1024px) {
