--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -1,10 +1,10 @@
-<nav class="p-4 max-w-7xl flex justify-between">
+<nav class="p-4 max-w-7xl flex justify-between absolute right-0 left-0">
   <% if(path === '/docs') { %>
      <div class="lg:hidden">
     <button id="menu-toggle" class="h-8 w-8 flex gap-1 flex-col">
-      <div class="w-8 h-1 bg-black rounded"></div>
-      <div class="w-8 h-1 bg-black rounded"></div>
-      <div class="w-8 h-1 bg-black rounded"></div>
+      <div class="w-8 h-1 bg-neutral rounded"></div>
+      <div class="w-8 h-1 bg-neutral rounded"></div>
+      <div class="w-8 h-1 bg-neutral rounded"></div>
     </button>
   </div>
   <% } %>
@@ -21,11 +21,11 @@
   const sidebar = document.getElementById('sidebar')
   const closeNavBtn = document.getElementById('close-nav')
 
-  menuToggle.addEventListener('click', () => {
+  menuToggle?.addEventListener('click', () => {
     sidebar.classList.remove('hidden')
   })
 
-  closeNavBtn.addEventListener('click', () => {
+  closeNavBtn?.addEventListener('click', () => {
     sidebar.classList.add('hidden')
   })
 </script>
