--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -1,19 +1,19 @@
-<aside id="sidebar" class="hidden lg:block border-r min-h-screen p-4 fixed top-0 left-0 w-full bg-white lg:w-60">
+<aside id="sidebar" class="hidden lg:block border-r min-h-screen p-4 fixed top-0 left-0 w-full lg:w-60 border-secondary z-50 bg-primary">
   <div class="relative">
-    <div class="flex flex-col gap-8">
+    <div class="flex flex-col gap-12">
       <section class="flex flex-col gap-2">
-        <h4 class="text-2xl"> 
-          <a href="#todos">General</a>
+        <h4 class="text-xl font-semibold"> 
+          <a href="#todos" class="uppercase">General</a>
         </h4>
-        <a href="#how_to">How to use it?</a>
+        <a href="#how_to" class="text-link text-sm">How to use it?</a>
       </section>
   
-      <section class="flex flex-col gap-2">
-        <h4 class="text-2xl">
-          <a href="#todos">Todos</a>
+      <section class="flex flex-col gap-6">
+        <h4 class="text-xl font-semibold">
+          <a href="#todos" class="uppercase">Todos</a>
         </h4>
         <% routes.forEach(function(route){ %>
-          <a href="#<%= route.id %>"><%= route.title %></a>
+          <a href="#<%= route.id %>" class="text-link text-sm"><%= route.title %></a>
         <% }); %>
       </section>
     </div>
