feat(ui): Update UI

--- a/public/style.css
+++ b/public/style.css
@@ -632,6 +632,10 @@ video {
   width: 100%;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -785,6 +789,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pr-4 {
