--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="hidden lg:block border-r min-h-screen p-4 fixed top-0 left-0 w-full lg:w-60 border-secondary z-50 bg-primary">
+<aside id="sidebar" class="hidden border-r min-h-screen p-4 lg:block w-60 border-secondary z-50 bg-primary">
   <div class="relative">
     <div class="flex flex-col gap-12">
       <section class="flex flex-col gap-2">
