--- a/views/pages/docs.ejs
+++ b/views/pages/docs.ejs
@@ -4,7 +4,7 @@
     <%- include('../components/sidebar'); %>
     
     
-    <main class="flex-1 lg:pl-60 relative max-w-7xl">
+    <main class="flex-1 relative max-w-7xl">
       <%- include('../components/nav'); %>
 
       <section class="px-4 lg:px-10 py-4 max-w-5xl">
@@ -41,9 +41,9 @@
             </article>
           <% }); %>
         </section>
-
-        
       </section>
+
+      <%- include('../components/footer'); %>
     </main>
   </section>
 
