--- a/views/components/nav.ejs
+++ b/views/components/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="p-4 max-w-7xl flex justify-between absolute right-0 left-0">
   <div class="max-w-6xl mx-auto w-full flex justify-end gap-4">
-    <a href="/">Home</a>
-    <a href="/docs">Docs</a>
-    <a href="https://github.com/krzysztofkaptur/fakeapi" target="_blank">GitHub</a>
+    <a href="/" class="font-semibold">Home</a>
+    <a href="/docs" class="font-semibold">Docs</a>
+    <a href="https://github.com/krzysztofkaptur/fakeapi" target="_blank" class="font-semibold">GitHub</a>
   </div>
 </nav>
