--- a/views/pages/docs.ejs
+++ b/views/pages/docs.ejs
@@ -4,7 +4,7 @@
     <%- include('../components/sidebar'); %>
     
     
-    <main class="flex-1 relative max-w-7xl">
+    <main class="flex-1 relative max-w-7xl lg:pl-60">
       <%- include('../components/nav'); %>
 
       <section class="px-4 lg:px-10 py-4 max-w-5xl">
