--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,3 +1,3 @@
-  <footer class="max-w-7xl mx-auto px-2 py-4 text-sm">
+  <footer class="max-w-7xl mx-auto px-4 lg:px-10 py-4 text-sm text-center">
     <p>Made by <a href="https://frontdev.me/" class="text-accent" target="_blank">Chris</a></p>
   </footer>
