feat(docs): Add how to use it text

--- a/views/components/sidebar.ejs
+++ b/views/components/sidebar.ejs
@@ -5,7 +5,7 @@
         <h4 class="text-xl font-semibold"> 
           <a href="#todos" class="uppercase hover:text-accent">General</a>
         </h4>
-        <a href="#how_to" class="text-link text-sm hover:text-accent">How to use it?</a>
+        <a href="#how_to" class="text-link text-sm hover:text-accent">How to use it</a>
       </section>
   
       <section class="flex flex-col gap-6">
