feat(logo): Add logo

--- a/views/pages/docs.ejs
+++ b/views/pages/docs.ejs
@@ -4,11 +4,11 @@
     <%- include('../components/sidebar'); %>
     
     
-    <main class="flex-1 relative max-w-7xl lg:pl-60">
+    <main class="flex-1 relative max-w-7xl lg:ml-60">
       <%- include('../components/nav'); %>
 
       <section class="px-4 lg:px-10 py-4 max-w-5xl">
-        <div class="my-20 max-w-xl flex flex-col gap-4">
+        <div class="my-24 lg:my-40 max-w-xl flex flex-col gap-4">
           <h2 id="how_to" class="text-3xl text-accent font-semibold">How to use it</h2>
           <p>You can copy/paste examples from below into your codebase to get JSON responses. Have fun!</p>
         </div>
