fix(docs): test

--- a/src/views/pages/docs.ejs
+++ b/src/views/pages/docs.ejs
@@ -9,7 +9,7 @@
 
       <section class="px-4 lg:px-10 py-4 max-w-5xl">
         <div class="my-24 lg:my-40 max-w-xl flex flex-col gap-4">
-          <h2 id="how_to" class="text-3xl text-accent font-semibold">How to use it</h2>
+          <h2 id="how_to" class="text-3xl text-accent font-semibold">How to use it?</h2>
           <p>You can copy/paste examples from below into your codebase to get JSON responses. Have fun!</p>
         </div>
 
