--- a/src/views/pages/docs.ejs
+++ b/src/views/pages/docs.ejs
@@ -7,39 +7,70 @@
     <main class="flex-1 relative max-w-7xl lg:ml-60">
       <%- include('../components/nav'); %>
 
-      <section class="px-4 lg:px-10 py-4 max-w-5xl">
-        <div class="my-24 lg:my-40 max-w-xl flex flex-col gap-4">
+      <section class="px-4 lg:px-10 py-4 max-w-5xl flex flex-col gap-32 mt-32 md:mt-44">
+        <section class="max-w-xl flex flex-col gap-4">
           <h2 id="how_to" class="text-3xl text-accent font-semibold">How to use it</h2>
           <p>You can copy/paste examples from below into your codebase to get JSON responses. Have fun!</p>
-        </div>
+        </section>
 
-        <h2 id="todos" class="text-3xl text-accent font-semibold">Todos</h2>
+        <section>
+          <h2 id="todos" class="text-3xl text-accent font-semibold">Todos</h2>
+          <div class="flex flex-col gap-16 py-8">
+            <% todos.forEach(function(todo){ %>
+              <article>
+                <div>
+                  <header>
+                    <h3 id="<%= todo.id %>" class="text-lg font-semibold"><%= todo.title %></h3>
+                  </header>
+                  <pre>
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                      <%= todo.code %>
+                    </code>
+                  </pre>
+                </div>
+                
+                <button class="bg-accent text-sm py-2 px-4 text-primary font-semibold" data-show-response>Show response</button>
+                
+                <div class="hidden response">
+                  <pre>
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                      <%= todo.responseExample %>
+                    </code>
+                  </pre>
+                </div>
+              </article>
+            <% }); %>
+          </div>
+        </section>
 
-        <section class="flex flex-col gap-16 py-8">
-          <% routes.forEach(function(route){ %>
-            <article>
-              <div>
-                <header>
-                  <h3 id="<%= route.id %>" class="text-lg font-semibold"><%= route.title %></h3>
-                </header>
-                <pre>
-                  <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
-                    <%= route.code %>
-                  </code>
-                </pre>
-              </div>
-              
-              <button class="bg-accent text-sm py-2 px-4 text-primary font-semibold" data-show-response>Show response</button>
-              
-              <div class="hidden response">
-                <pre>
-                  <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
-                    <%= route.responseExample %>
-                  </code>
-                </pre>
-              </div>
-            </article>
-          <% }); %>
+        <section>
+          <h2 id="users" class="text-3xl text-accent font-semibold">Users</h2>
+          <div class="flex flex-col gap-16 py-8">
+            <% users.forEach(function(user){ %>
+              <article>
+                <div>
+                  <header>
+                    <h3 id="<%= user.id %>" class="text-lg font-semibold"><%= user.title %></h3>
+                  </header>
+                  <pre>
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                      <%= user.code %>
+                    </code>
+                  </pre>
+                </div>
+                
+                <button class="bg-accent text-sm py-2 px-4 text-primary font-semibold" data-show-response>Show response</button>
+                
+                <div class="hidden response">
+                  <pre>
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                      <%= user.responseExample %>
+                    </code>
+                  </pre>
+                </div>
+              </article>
+            <% }); %>
+          </div>
         </section>
       </section>
 
