--- a/public/style.css
+++ b/public/style.css
@@ -591,10 +591,6 @@ video {
   margin-right: auto;
 }
 
-.mt-44 {
-  margin-top: 11rem;
-}
-
 .mt-32 {
   margin-top: 8rem;
 }
@@ -651,8 +647,16 @@ video {
   flex: 1 1 0%;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -687,6 +691,10 @@ video {
   gap: 5rem;
 }
 
+.gap-32 {
+  gap: 8rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -699,16 +707,22 @@ video {
   gap: 2rem;
 }
 
-.gap-32 {
-  gap: 8rem;
-}
-
 .overflow-auto {
   overflow: auto;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .border {
@@ -750,6 +764,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-4 {
