--- a/src/views/pages/docs.ejs
+++ b/src/views/pages/docs.ejs
@@ -17,7 +17,7 @@
           <h2 id="todos" class="text-3xl text-accent font-semibold">Todos</h2>
           <div class="flex flex-col gap-16 py-8">
             <% todos.forEach(function(todo){ %>
-              <article class="flex flex-col gap-4 items-start">
+              <article class="flex flex-col gap-4 items-start w-full max-w-[calc(100vw-2rem)]">
                 <div class="w-full">
                   <header>
                     <h3 id="<%= todo.id %>" class="text-lg font-semibold"><%= todo.title %></h3>
@@ -27,7 +27,7 @@
                       <span>Javascript</span>
                       <button class="cursor-pointer" data-copy-code>copy</button>
                     </div>
-                    <code class="bg-secondary text-white block rounded-b-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                    <code class="bg-secondary text-white block rounded-b-lg text-sm lg:text-base overflow-auto pr-4">
                       <%= todo.code %>
                     </code>
                   </pre>
@@ -35,9 +35,9 @@
                 
                 <button class="bg-accent text-sm py-2 px-4 text-primary font-semibold" data-show-response>Show response</button>
                 
-                <div class="hidden response">
+                <div class="hidden response w-full">
                   <pre>
-                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base overflow-auto pr-4">
                       <%= todo.responseExample %>
                     </code>
                   </pre>
@@ -51,7 +51,7 @@
           <h2 id="users" class="text-3xl text-accent font-semibold">Users</h2>
           <div class="flex flex-col gap-16 py-8">
             <% users.forEach(function(user){ %>
-              <article class="flex flex-col gap-4 items-start">
+              <article class="flex flex-col gap-4 items-start w-full max-w-[calc(100vw-2rem)]">
                 <div class="w-full">
                   <header>
                     <h3 id="<%= user.id %>" class="text-lg font-semibold"><%= user.title %></h3>
@@ -61,7 +61,7 @@
                       <span>Javascript</span>
                       <button class="cursor-pointer" data-copy-code>copy</button>
                     </div>
-                    <code class="bg-secondary text-white block rounded-b-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                    <code class="bg-secondary text-white block rounded-b-lg text-sm lg:text-base overflow-auto pr-4">
                       <%= user.code %>
                     </code>
                   </pre>
@@ -69,9 +69,9 @@
                 
                 <button class="bg-accent text-sm py-2 px-4 text-primary font-semibold" data-show-response>Show response</button>
                 
-                <div class="hidden response">
+                <div class="hidden response w-full">
                   <pre>
-                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base max-w-[calc(100vw-3.25rem)] overflow-auto pr-4">
+                    <code class="bg-secondary text-white block rounded-lg text-sm lg:text-base overflow-auto pr-4">
                       <%= user.responseExample %>
                     </code>
                   </pre>
